Add working group front-end and data-collection

--- a/homework/index.html
+++ b/homework/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/homework/style.css">
     <script src="https://kit.fontawesome.com/7ceee42a74.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <title>Form Builder</title>
 </head>
 
@@ -24,196 +27,12 @@
         </div>
     </div>
 
-    <div class="main-container">
+    <form class="main-container" id="main" onsubmit="event.preventDefault()">
 
         <h1>Thyroid Cancer</h1>
         <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
-
-        <!-- Example Question -->
-        <div class="question-container">
-            <div class="left-container">
-                <label class="opt-out" for="opt-out-1">
-                    <input type="checkbox" id="opt-out-1" name="opt-out"> <span class="label-text"> Opt Out</span>
-                </label>
-                <p>1. This is an example question that can be very very very long?</p>
-                <label class="answer"><input type="radio" disabled> Answer 1</label>
-                <label class="answer"><input type="radio" disabled> Answer 2</label>
-                <label class="answer"><input type="radio" disabled> Answer 3</label>
-            </div>
-
-            <div class="right-container">
-                <div class="clarity-relevance">
-                    <div class="clarity-score">
-                        <p>Clarity</p>
-                        <div class="scale">
-                            <label for="">Unclear</label>
-                            <label for="clarity" class="score-label">1<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">2<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">3<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">4<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">5<input name="clarity" type="radio"></label>
-                            <label for="">Clear</label>
-                        </div>
-                    </div>
-
-                    <div class="relevance-score">
-                        <p>Relevance</p>
-                        <div class="scale">
-                            <label for="">Irrelevant</label>
-                            <label for="relevance" class="score-label">1<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">2<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">3<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">4<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">5<input name="relevance" type="radio"></label>
-                            <label for="">Relevant</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="overall-score">
-                    <p>Overall</p>
-                    <div>
-                        <label for="overall"><input name="overall" type="radio">Include</label>
-                        <label for="overall"><input name="overall" type="radio">Optional</label>
-                        <label for="overall"><input name="overall" type="radio">Do not include</label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="comment">
-                <div class="comment-icon">
-                    <a href="" class=""><i class="fas fa-plus"></i>Comment</a>
-                </div>
-                <div class="comment-box">
-                    <p>ADD COMMENT</p>
-                    <input type="text" placeholder="Enter your comment here">
-                    <div class="comment-buttons">
-                        <button class="secondary-btn">Cancel</button>
-                        <button class="main-btn">Save</button>
-                    </div>  
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Example Skipped Question -->
-        <div class="question-container">
-            <div class="left-container">
-                <label class="opt-out" for="opt-out-2">
-                    <input type="checkbox" id="opt-out-2" name="opt-out" checked> <span class="label-text"> Opt Out</span>
-                </label>
-                <p>2. This is another example question that can be much much much much longer? Is it much much much longer than 3 lines?</p>
-                <label class="answer"><input type="radio" disabled> Answer 1</label>
-                <label class="answer"><input type="radio" disabled> Answer 2</label>
-                <label class="answer"><input type="radio" disabled> Answer 3</label>
-            </div>
-
-            <div class="right-container inactive">
-                <div class="clarity-relevance">
-                    <div class="clarity-score">
-                        <p>Clarity</p>
-                        <div class="scale">
-                            <label for="">Unclear</label>
-                            <label for="clarity" class="score-label">1<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">2<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">3<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">4<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">5<input name="clarity" type="radio"></label>
-                            <label for="">Clear</label>
-                        </div>
-                    </div>
-
-                    <div class="relevance-score">
-                        <p>Relevance</p>
-                        <div class="scale">
-                            <label for="">Irrelevant</label>
-                            <label for="relevance" class="score-label">1<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">2<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">3<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">4<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">5<input name="relevance" type="radio"></label>
-                            <label for="">Relevant</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="overall-score">
-                    <p>Overall</p>
-                    <div>
-                        <label for="overall"><input name="overall" type="radio">Include</label>
-                        <label for="overall"><input name="overall" type="radio">Optional</label>
-                        <label for="overall"><input name="overall" type="radio">Do not include</label>
-                    </div>
-                </div>
-            </div>
-            <div class="comment">
-                <div class="comment-icon">
-                    <a href=""><i class="fas fa-plus"></i>Comment</a>
-                </div>
-                <!-- <div class="comment-box">
-                    <p>ADD COMMENT</p>
-                    <input type="text" placeholder="Enter your comment here">
-                    <div class="comment-buttons">
-                        <button class="secondary-btn">Cancel</button>
-                        <button class="main-btn">Save</button>
-                    </div>  
-                </div> -->
-            </div>
-        </div>
-
-        <!-- Example Skipped Question -->
-        <div class="question-container">
-            <div class="left-container">
-                <label class="opt-out" for="opt-out-2">
-                    <input type="checkbox" id="opt-out-2" name="opt-out" checked> <span class="label-text"> Opt Out</span>
-                </label>
-                <p>2. This is another example question that can be much much much much longer? Is it much much much longer than 3 lines?</p>
-                <label class="answer"><input type="radio" disabled> Answer 1</label>
-                <label class="answer"><input type="radio" disabled> Answer 2</label>
-                <label class="answer"><input type="radio" disabled> Answer 3</label>
-            </div>
-
-            <div class="right-container inactive">
-                <div class="clarity-relevance">
-                    <div class="clarity-score">
-                        <p>Clarity</p>
-                        <div class="scale">
-                            <label for="">Unclear</label>
-                            <label for="clarity" class="score-label">1<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">2<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">3<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">4<input name="clarity" type="radio"></label>
-                            <label for="clarity" class="score-label">5<input name="clarity" type="radio"></label>
-                            <label for="">Clear</label>
-                        </div>
-                    </div>
-
-                    <div class="relevance-score">
-                        <p>Relevance</p>
-                        <div class="scale">
-                            <label for="">Irrelevant</label>
-                            <label for="relevance" class="score-label">1<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">2<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">3<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">4<input name="relevance" type="radio"></label>
-                            <label for="relevance" class="score-label">5<input name="relevance" type="radio"></label>
-                            <label for="">Relevant</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="overall-score">
-                    <p>Overall</p>
-                    <div>
-                        <label for="overall"><input name="overall" type="radio">Include</label>
-                        <label for="overall"><input name="overall" type="radio">Optional</label>
-                        <label for="overall"><input name="overall" type="radio">Do not include</label>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
+        <input type="submit" value="Submit" class="submit-btn">
+    </form>
     
     
 
@@ -223,7 +42,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
-    <script type="text/babel" src="/homework/script.js"></script>
+    <script src="/homework/script.js"></script>
 </body>
 
 </html>
