fixed title alignment

--- a/homework/index.html
+++ b/homework/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <button class="save-btn">Save</button>
-        <span id="lastSaved">Last Saved Today</span>
+        <span id="lastSaved">Last Saved 5 mins ago</span>
     </div>
 
     <form class="main-container" id="main" onsubmit="event.preventDefault()">
