--- a/homework/index.html
+++ b/homework/index.html
@@ -26,7 +26,7 @@
                 <p>4</p>
             </div>
         </div>
-        <button class="save-btn">Save</button>
+        <button class="save-btn" onclick="submitForm()">Save</button>
         <span id="lastSaved">Last Saved Today</span>
     </div>
 
@@ -37,7 +37,7 @@
         <!-- <button class="submit-btn">Submit</button> -->
         <!-- <input type="submit" value="Submit" class="submit-btn"> -->
     </form>
-    
+
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-database.js"></script>
