added instructions for homework view

--- a/homework/index.html
+++ b/homework/index.html
@@ -34,6 +34,27 @@
 
         <h1>Thyroid Cancer</h1>
         <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
+        
+        <div class="score-instructions">
+            <h3>Score Instructions</h3>
+            <div class="scale-instructions">
+                    <label class="category">Clarity</label>
+                    <div class="scale-instructions-label"><label class="score-number">1</label><label class="score-explanation">Not at all clear</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">2</label><label class="score-explanation">Somewhat unclear</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">3</label><label class="score-explanation">Neutral</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">4</label><label class="score-explanation">Somewhat clear</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">5</label><label class="score-explanation">Very clear</label></div>
+            </div>
+
+            <div class="scale-instructions">
+                    <label class="category">Relevance</label>
+                    <div class="scale-instructions-label"><label class="score-number">1</label><label class="score-explanation">Not at all relevant</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">2</label><label class="score-explanation">Somewhat relevant</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">3</label><label class="score-explanation">Neutral</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">4</label><label class="score-explanation">Somewhat relevant</label></div>
+                    <div class="scale-instructions-label"><label class="score-number">5</label><label class="score-explanation">Very relevant</label></div>
+            </div>
+        </div>
         <!-- <button class="submit-btn">Submit</button> -->
         <!-- <input type="submit" value="Submit" class="submit-btn"> -->
     </form>
