new instructions for homework

--- a/homework/index.html
+++ b/homework/index.html
@@ -35,7 +35,8 @@
         <h1>Thyroid Cancer</h1>
         <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
         
-        <div class="score-instructions">
+        <a href="#" onclick="showInstructions(this)" class="instructions-toggle"><i class="fas fa-plus-circle"></i>Click to show instructions</a>
+        <div class="score-instructions hidden" id="score-instructions">
             <h3>Score Instructions</h3>
             <div class="scale-instructions">
                     <label class="category">Clarity</label>
