Add the ability to add custom instructions when sharing

--- a/homework/index.html
+++ b/homework/index.html
@@ -35,6 +35,7 @@
 
         <h1 id="form-title">Thyroid Cancer</h1>
         <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
+        <p id="custom_instructions"></p>
 
         <a href="#" onclick="showInstructions(this)" class="instructions-toggle"><i class="fas fa-plus-circle"></i>Click
             to show instructions</a>
