Edit placeholder text

--- a/formbuilder/index.html
+++ b/formbuilder/index.html
@@ -36,7 +36,7 @@
         <div class="modal-content">
             <h2>Share with others</h2>
             <textarea id="email-list" placeholder="Enter each email address on a new line"></textarea>
-            <textarea id="instructions" placeholder="Enter instructions here"></textarea>
+            <textarea id="instructions" placeholder="Enter instructions here that will be shown on the voting page"></textarea>
             <i id="close-icon" class="fa fa-times" onclick="closeModal()"></i>
             <button class="solid-btn" onclick="generateLinks()">Generate Share Links</button>
             <div id="email-links" class="email-links">
