--- a/homework/index.html
+++ b/homework/index.html
@@ -38,7 +38,7 @@
         <p id="custom_instructions"></p>
 
         <a href="#" onclick="showInstructions(this)" class="instructions-toggle"><i class="fas fa-plus-circle"></i>Click
-            to show instructions</a>
+            to show voting criteria</a>
         <div class="score-instructions hidden" id="score-instructions">
             <h3>Score Instructions</h3>
             <div class="scale-instructions">
