--- a/homework/index.html
+++ b/homework/index.html
@@ -40,7 +40,7 @@
         <a href="#" onclick="showInstructions(this)" class="instructions-toggle"><i class="fas fa-plus-circle"></i>Click
             to show voting criteria</a>
         <div class="score-instructions hidden" id="score-instructions">
-            <h3>Score Instructions</h3>
+            <h3>Voting Criteria</h3>
             <div class="scale-instructions">
                 <label class="category">Clarity</label>
                 <div class="scale-instructions-label"><label class="score-number">1</label><label
